"level" pasa a llamarse "levels" por seguir la convención de utilizar el plural.


Cambios presentados el 2021/01/30
---------------------------------
Se remplaza el modo en el que se trabaja con las colisiones entre personajes por una
solución más orientada a eventos. Los actores notifican del movimiento que desean
realizar a un objeto conocido como CollisionDispatcher, que determina hasta dónde
pueden moverse, realiza el desplazamiento y notifica a los actores con los que se
haya producido una colisión del hecho mediante eventos. Con este cambio se pretende
tanto dejar de utilizar el objeto CollisionInfo (lo que ya se ha logrado) como
simplificar la manera en la que se describen las interacciones entre actores (lo
que considero que también se ha logrado con esto).

Se simplifican los constructores de los actores para recibir solo información final
como la instancia del objeto LaPandemia. Ya que algunos datos como la dirección del
personaje o el generador (para los objetos generados dinámicamente) se establecen
mediante setters, me pareció una decisión arbitraria que otra información como la
posición inicial sí estuvieran en el constructor, por lo que ahora por coherencia
ya no lo están.

Se añade el papel higiénico como nuevo actor.

Se pasa de un sistema de coordenadas de mundo reales a enteras debido a que la
detección de colisiones tal y como está planteada para este juego estaba resultando
problemática con variables float por los problemas propios de utilizar una
representación de números reales de precisión limitada donde se necesita precisión
ilimitada. Esto conlleva adaptar ligeramente la implementación del movimiento de
los virus para que sigan pudiendo moverse a lo largo del tiempo como lo hacían pese
a tener que especificar los desplazamientos en cada frame en cantidades enteras.

Se limita la cantidad máxima de virus y de papel higiénico que pueden estar
presentes en el mapa simultáneamente.