@@ -1,16 +1,16 @@
 
-player-no-masks.png
+player-invincible.png
 format: RGBA8888
 filter: Nearest,Nearest
 repeat: none
-player-no-masks
+player-invincible
   rotate: false
   xy: 1, 1
   size: 64, 64
   orig: 64, 64
   offset: 0, 0
   index: 2
-player-no-masks
+player-invincible
   rotate: false
   xy: 67, 1
   size: 64, 64
