@@ -1,19 +1,0 @@
-
-player-many-masks.png
-format: RGBA8888
-filter: Nearest,Nearest
-repeat: none
-player-many-masks
-  rotate: false
-  xy: 1, 1
-  size: 64, 64
-  orig: 64, 64
-  offset: 0, 0
-  index: 2
-player-many-masks
-  rotate: false
-  xy: 67, 1
-  size: 64, 64
-  orig: 64, 64
-  offset: 0, 0
-  index: 1
