@@ -40,13 +40,13 @@ public class LoadingScreen implements Screen {
         parent.assetManager.load("fonts/nice32.fnt", BitmapFont.class);
         parent.assetManager.finishLoading();
 
-        parent.assetManager.load("player-no-masks.pack", TextureAtlas.class);
-        parent.assetManager.load("player-few-masks.pack", TextureAtlas.class);
-        parent.assetManager.load("player-many-masks.pack", TextureAtlas.class);
+        parent.assetManager.load("player-default.pack", TextureAtlas.class);
+        parent.assetManager.load("player-invincible.pack", TextureAtlas.class);
         parent.assetManager.load("virus.pack", TextureAtlas.class);
         parent.assetManager.load("fan.pack", TextureAtlas.class);
         parent.assetManager.load("wall.png", Texture.class);
         parent.assetManager.load("mask.png", Texture.class);
+        parent.assetManager.load("needle.png", Texture.class);
         parent.assetManager.load("toiletpaper.png", Texture.class);
 
         loadingTitleLayout.setText(
